[package]
name = "pb_pki"
version = "0.1.1"
edition = "2021"

[dependencies]
# logging support
log = { version = "0.4.21", features = ["std", "serde"] }

# Networking-related crates
reqwest = { version = "0.12.4" , features = ["rustls-tls"]}

certval = { git = "https://github.com/carl-wallace/rust-pki.git", features = ["std"]}

[features]
default = ["dev"]
dev = []
om_nipr = []
om_sipr = []
nipr = []
sipr = []