[package]
name = "pb_pki"
version = "0.1.3"
edition = "2021"

[dependencies]
# logging support
log = { version = "0.4.22", features = ["std", "serde"] }

# Networking-related crates
reqwest = { version = "0.12.12" , features = ["rustls-tls", "native-tls"] }

certval = { git = "https://github.com/carl-wallace/rust-pki.git", features = ["std"]}

[features]
default = ["dev"]
dev = []
om_nipr = []
om_sipr = []
nipr = []
sipr = []